--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node-dev src/server.ts",
     "build": "tsc",
-    "serve": "node dist/server.js"
+    "serve": "node ./dist/server.js"
   },
   "author": "",
   "license": "ISC",
